Fixing weird transition artifacts on collapse menu

--- a/CSETWebNg/src/app/layout/layout-main/layout-main.component.scss
+++ b/CSETWebNg/src/app/layout/layout-main/layout-main.component.scss
@@ -646,8 +646,21 @@ table.assessment-summary th {
 @media only screen and (max-width: 767px) {
   .navbar-collapse.collapse.show {
     background-color: $primary-color;
-    z-index: 10000;
+    z-index: 1000;
     padding: 10px;
+    border-radius: 4px;
+    position: absolute;
+    right: 10px;
+    box-shadow: 0px 5px 5px -3px rgba(0, 0, 0, 0.2), 0px 8px 10px 1px rgba(0, 0, 0, 0.14), 0px 3px 14px 2px rgba(0, 0, 0, 0.12)
+  }
+
+  .navbar-collapse.collapsing {
+    background-color: $primary-color;
+    z-index: 1000;
+    position: absolute;
+    padding: 10px;
+    right: 10px;
+    box-shadow: 0px 5px 5px -3px rgba(0, 0, 0, 0.2), 0px 8px 10px 1px rgba(0, 0, 0, 0.14), 0px 3px 14px 2px rgba(0, 0, 0, 0.12)
   }
 }
 
